rellenado de datos

--- a/perfil.html
+++ b/perfil.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <img src="./images/IMG_9809.jpg" />
+    <h2><strong>Alejandro Arranz</strong></h2>
+    <p>En proceso de desarrolador fullstack</p>
   </body>
 </html>
