--- a/perfil.html
+++ b/perfil.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <header>
+      <navbar>
+        <h3>Alejandro Arranz</h3>
+        <ul>
+          <li>Home</li>
+          <li>Portfolio</li>
+          <li>Staff</li>
+          <li>Features</li>
+          <li>Blog</li>
+          <li>Contact</li>
+        </ul>
+      </navbar>
+    </header>
     <img src="./images/IMG_9809.jpg" />
     <h2><strong>Alejandro Arranz</strong></h2>
     <p>En proceso de desarrolador fullstack</p>
