--- a/perfil.html
+++ b/perfil.html
@@ -11,17 +11,19 @@
       <navbar>
         <h3>Alejandro Arranz</h3>
         <ul>
-          <li>Home</li>
-          <li>Portfolio</li>
-          <li>Staff</li>
-          <li>Features</li>
-          <li>Blog</li>
-          <li>Contact</li>
+          <li>Información</li>
+          <li>estudios</li>
+          <li>Repositorios</li>
+          <li>Proyectos</li>
+          <li>Contacto</li>
         </ul>
       </navbar>
     </header>
-    <img src="./images/IMG_9809.jpg" />
-    <h2><strong>Alejandro Arranz</strong></h2>
-    <p>En proceso de desarrolador fullstack</p>
+    <div class="container1">
+      <img src="./images/IMG_9809.jpg" />
+      <h2><strong>Alejandro Arranz</strong></h2>
+      <p>En proceso de desarrolador fullstack</p>
+      <p>Aprendiendo Git con Elena</p>
+    </div>
   </body>
 </html>
