--- a/perfil.html
+++ b/perfil.html
@@ -9,7 +9,6 @@
   <body>
     <header>
       <navbar>
-        <h3>Alejandro Arranz</h3>
         <ul>
           <li>Información</li>
           <li>estudios</li>
@@ -21,8 +20,8 @@
     </header>
     <div class="container1">
       <img src="./images/IMG_9809.jpg" />
-      <h2><strong>Alejandro Arranz</strong></h2>
-      <p>En proceso de desarrolador fullstack</p>
+      <h1>Alejandro Arranz</h1>
+      <p>En proceso de desarrollador fullstack</p>
       <p>Aprendiendo Git con Elena</p>
     </div>
   </body>
