--- a/perfil.html
+++ b/perfil.html
@@ -20,8 +20,7 @@
       </navbar>
     </header>
     <div class="container1">
-      <img src="./images/IMG_9809.jpg" />
-      <h2><strong>Alejandro Arranz</strong></h2>
+      <img src="./images/homer.jpg" />
       <p>En proceso de desarrolador fullstack</p>
       <p>Aprendiendo Git con Elena</p>
     </div>
